--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 .App {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   height: 100dvh;
   flex-direction: column;
